[package]
name = "har"
version = "1.0.0"
edition = "2021"
description = "HDF5 Archive Utility - a tar-like tool using HDF5 format"

[[bin]]
name = "har"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hdf5 = { package = "hdf5-metno", version = "0.12" }
rayon = "1.10"
walkdir = "2"
shellexpand = "3"
pathdiff = "0.2"
sha2 = "0.10"
chrono = "0.4"

[features]
default = []
static-hdf5 = ["hdf5/static", "hdf5/zlib"]

[dev-dependencies]
tempfile = "3"
